[gd_scene load_steps=11 format=2]

[ext_resource path="res://Parts/Node.gd" type="Script" id=1]
[ext_resource path="res://Images/Cell.png" type="Texture" id=2]
[ext_resource path="res://Images/Fonts/KeepCalm-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 199.877, 199.452 )

[sub_resource type="DynamicFont" id=2]

size = 300
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=3]

resource_name = "Change"
length = 0.27
loop = false
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Image_holder/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.18 ),
"transitions": PoolRealArray( 1, 1, 0.25 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15, 1.15 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image_holder/Label_holder/Label:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.09, 0.18 ),
"transitions": PoolRealArray( 1, 1, 0.25 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.15, 1.15 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Image_holder:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.12, 0.18, 0.27 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15, 1.15 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "Hint"
length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Image_holder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.55, 0.7, 0.85, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -32.5007 ), Vector2( 0, 0 ), Vector2( 0, -32.5007 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image_holder:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.05, 0 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "hint_colour"
}, {
"args": [ false ],
"method": "hint_colour"
} ]
}

[sub_resource type="Animation" id=5]

length = 0.27
loop = false
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Image_holder/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.27 ),
"transitions": PoolRealArray( 0.25, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15, 1.15 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image_holder/Label_holder/Label:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.09, 0.27 ),
"transitions": PoolRealArray( 0.25, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15, 1.15 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Image_holder:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.09, 0.27 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15, 1.15 ), Vector2( 1e-005, 1e-005 ) ]
}

[sub_resource type="Animation" id=6]

length = 0.27
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Image_holder/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.18, 0.27 ),
"transitions": PoolRealArray( 1, 1, 0.25 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 1.15, 1.15 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image_holder/Label_holder/Label:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.18, 0.18, 0.27 ),
"transitions": PoolRealArray( 1, 1, 1, 0.25 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.15, 1.15 ), Vector2( 1.15, 1.15 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Image_holder:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.18, 0.27 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.15, 1.15 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.66
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Image_holder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.35, 0.47 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -39.7214 ), Vector2( 0, 0 ), Vector2( 0, -39.7214 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image_holder:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 0.25, 0.25, 1, 0.25 ),
"update": 0,
"values": [ 0.0, 10.0, -10.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Image_holder/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.937255, 0.94902, 0.619608, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Image_holder:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.65 ),
"transitions": PoolRealArray( 1, 10.9427, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.65 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "success"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Image_holder/Label_holder/Label:custom_colors/font_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.921569, 0.937255, 0.454902, 1 ) ]
}

[node name="Node" type="Area2D" groups=[
"nodes",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]
value = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Image_holder" type="Node2D" parent="." index="1"]

modulate = Color( 0.976471, 0.976471, 0.976471, 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Sprite" type="Sprite" parent="Image_holder" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Label_holder" type="Node2D" parent="Image_holder" index="1"]

_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="Image_holder/Label_holder" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -502.0
margin_top = -477.0
margin_right = 434.0
margin_bottom = 459.0
rect_min_size = Vector2( 400, 400 )
rect_pivot_offset = Vector2( 504.986, 476.721 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "custom_colors", "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Change = SubResource( 3 )
anims/Hint = SubResource( 4 )
anims/Pop = SubResource( 5 )
anims/Reset = SubResource( 6 )
anims/Success = SubResource( 7 )
blend_times = [  ]

[node name="DropTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="input_event" from="." to="." method="_on_Node_input_event"]

[connection signal="mouse_entered" from="." to="." method="_on_Node_mouse_entered"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="tween_completed" from="DropTween" to="." method="_on_DropTween_tween_completed"]


